--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     body {
       margin: 0; /* Quita el margen por defecto */
       font-family: 'Poppins', sans-serif; /* Aplica la fuente Poppins */
-      background: #fffbe6; /* Color de fondo claro y llamativo */
+      background: blue; /* Color de fondo claro y llamativo */
       color: #333; /* Color del texto */
     }
 
